--- a/index.html
+++ b/index.html
@@ -248,7 +248,10 @@
             Simuladores, estadísticas, temarios y todo lo que necesitas para
             triunfar en las oposiciones judiciales.
           </p>
-          <button class="btn-main" onclick="window.location.href='todo\inicio.html'">
+          <button
+            class="btn-main"
+            onclick="window.location.href='todo/inicio.html'"
+          >
             Entrar a la Aplicación
           </button>
         </div>
