--- a/todo/inicio.html
+++ b/todo/inicio.html
@@ -139,14 +139,14 @@
       </div>
     </section>
 
-    <section id="examen">
+    <section id="test">
       <h2>Test</h2>
       <div class="section-box">
         <p>
           Simulacros completos con temporizador, puntuación y dificultad
           realista. Prepárate como si fuera el día del examen.
         </p>
-        <p><a href="#">Ir a simulacros de examen →</a></p>
+        <p><a href="test/test.html">Ir a simulacros de examen →</a></p>
       </div>
     </section>
 
