--- a/todo/inicio.html
+++ b/todo/inicio.html
@@ -122,7 +122,7 @@
       <ul>
         <li><a href="temas\temas.html">Temas</a></li>
         <li><a href="test\test.html">Test </a></li>
-        <li><a href="#resumenes">Resúmenes</a></li>
+        <li><a href="test\TEST DE EXAMEN\index.html">Test oficiales</a></li>
         <li><a href="supuestos\home.html">Supuestos</a></li>
       </ul>
     </nav>
@@ -150,14 +150,18 @@
       </div>
     </section>
 
-    <section id="resumenes">
-      <h2>Resúmenes</h2>
+    <section id="examenes">
+      <h2>Exanenes Oficial</h2>
       <div class="section-box">
         <p>
-          Accede a resúmenes claros y directos de cada tema, para repasar rápido
-          o consolidar conocimientos clave.
+          Accede a los test oficiales claros y directos de cada tema, para
+          repasar rápido o consolidar conocimientos clave.
         </p>
-        <p><a href="#">Ver resúmenes →</a></p>
+        <p>
+          <a href="test\TEST DE EXAMEN\index.html"
+            >acceder a los rest oficiales →</a
+          >
+        </p>
       </div>
     </section>
 
