--- a/todo/inicio.html
+++ b/todo/inicio.html
@@ -158,9 +158,7 @@
           repasar rápido o consolidar conocimientos clave.
         </p>
         <p>
-          <a href="test\TEST DE EXAMEN\index.html"
-            >acceder a los rest oficiales →</a
-          >
+          <a href="test/examen/index.html">acceder a los rest oficiales →</a>
         </p>
       </div>
     </section>
