--- a/todo/inicio.html
+++ b/todo/inicio.html
@@ -158,7 +158,7 @@
           repasar rápido o consolidar conocimientos clave.
         </p>
         <p>
-          <a href="test/examen/index.html">acceder a los rest oficiales →</a>
+          <a href="examen/index.html">acceder a los rest oficiales →</a>
         </p>
       </div>
     </section>
