--- a/todo/inicio.html
+++ b/todo/inicio.html
@@ -122,7 +122,7 @@
       <ul>
         <li><a href="temas\temas.html">Temas</a></li>
         <li><a href="test\test.html">Test </a></li>
-        <li><a href="test\TEST DE EXAMEN\index.html">Test oficiales</a></li>
+        <li><a href="examen\index.html">Test oficiales</a></li>
         <li><a href="supuestos\home.html">Supuestos</a></li>
       </ul>
     </nav>
