--- a/todo/datos/contactos.html
+++ b/todo/datos/contactos.html
@@ -1,178 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Moises | Creador de moises-test</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Moises | Creador de moises-test</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-      body {
-        font-family: "Inter", sans-serif;
-        background-color: #0e0e0e;
-        color: #ffffff;
-        line-height: 1.6;
-      }
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #0e0e0e;
+      color: #ffffff;
+      line-height: 1.6;
+    }
 
-      a {
-        color: #d4af37;
-        text-decoration: none;
-      }
+    a {
+      color: #d4af37;
+      text-decoration: none;
+    }
 
-      header {
-        text-align: center;
-        padding: 4rem 1rem 2rem;
-        background-color: #0e0e0e;
-      }
+    header {
+      text-align: center;
+      padding: 4rem 1rem 2rem;
+      background-color: #0e0e0e;
+    }
 
-      header h1 {
-        font-size: 3rem;
-        color: #d4af37;
-      }
+    header h1 {
+      font-size: 3rem;
+      color: #d4af37;
+    }
 
-      header p {
-        font-size: 1.2rem;
-        color: #ccc;
-        margin-top: 0.5rem;
-      }
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+      margin-top: 0.5rem;
+    }
 
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 2rem 1rem;
-      }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem 1rem;
+    }
 
-      section {
-        margin-bottom: 3rem;
-      }
+    section {
+      margin-bottom: 3rem;
+    }
 
-      h2 {
-        font-size: 1.8rem;
-        color: #d4af37;
-        margin-bottom: 1rem;
-      }
+    h2 {
+      font-size: 1.8rem;
+      color: #d4af37;
+      margin-bottom: 1rem;
+    }
 
-      p {
-        font-size: 1.1rem;
-        color: #e0e0e0;
-        margin-bottom: 1rem;
-      }
+    p {
+      font-size: 1.1rem;
+      color: #e0e0e0;
+      margin-bottom: 1rem;
+    }
 
-      ul {
-        list-style-type: none;
-        padding-left: 0;
-      }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
 
-      ul li {
-        margin-bottom: 0.75rem;
-        padding-left: 1.2rem;
-        position: relative;
-      }
+    ul li {
+      margin-bottom: 0.75rem;
+      padding-left: 1.2rem;
+      position: relative;
+    }
 
-      ul li::before {
-        content: "✔";
-        color: #d4af37;
-        position: absolute;
-        left: 0;
-      }
+    ul li::before {
+      content: "✔";
+      color: #d4af37;
+      position: absolute;
+      left: 0;
+    }
 
-      .cta {
-        display: inline-block;
-        margin-top: 1rem;
-        padding: 0.75rem 1.5rem;
-        background-color: #d4af37;
-        color: #0e0e0e;
-        border-radius: 4px;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
-      }
+    .cta {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #d4af37;
+      color: #0e0e0e;
+      border-radius: 4px;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
 
-      .cta:hover {
-        background-color: #b8962e;
-      }
+    .cta:hover {
+      background-color: #b8962e;
+    }
 
-      footer {
-        text-align: center;
-        padding: 2rem 1rem;
-        background-color: #0e0e0e;
-        color: #888;
-        font-size: 0.9rem;
-        border-top: 1px solid #222;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Moises</h1>
-      <p>Programador | Creador de <strong>moises-test</strong></p>
-    </header>
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      background-color: #0e0e0e;
+      color: #888;
+      font-size: 0.9rem;
+      border-top: 1px solid #222;
+    }
+  </style>
+</head>
+<body>
 
-    <div class="container">
-      <section>
-        <h2>Sobre mí</h2>
-        <p>
-          Soy Moises, un apasionado del desarrollo de software con un enfoque
-          práctico en la creación de herramientas útiles para desarrolladores y
-          testers. A lo largo de mi carrera he buscado simplificar procesos
-          complejos, y de ahí nace <strong>moises-test</strong>, una solución
-          que refleja mi forma de trabajar: precisa, eficiente y bien pensada.
-        </p>
-        <p>
-          No solo programo por trabajo, programo porque disfruto resolver
-          problemas reales con código limpio y funcional. Mi objetivo es aportar
-          valor en cada proyecto.
-        </p>
-      </section>
+  <header>
+    <h1>Moises</h1>
+    <p>Programador | Creador de <strong>moises-test</strong></p>
+  </header>
 
-      <section>
-        <h2>¿Qué es moises-test?</h2>
-        <p>
-          <strong>moises-test</strong> es una herramienta de testing diseñada
-          para desarrolladores y QA que buscan automatización sin
-          complicaciones. Es modular, rápida de implementar y personalizable
-          para adaptarse a distintos entornos de desarrollo.
-        </p>
-        <p>
-          Es una solución que he construido con atención al detalle, pensando en
-          quienes necesitan eficiencia y resultados confiables.
-        </p>
-      </section>
+  <div class="container">
+    <section>
+      <h2>Sobre mí</h2>
+      <p>
+        Soy Moises, un apasionado del desarrollo de software con un enfoque práctico en la creación de herramientas útiles para desarrolladores y testers. 
+        A lo largo de mi carrera he buscado simplificar procesos complejos, y de ahí nace <strong>moises-test</strong>, una solución que refleja mi forma de trabajar: precisa, eficiente y bien pensada.
+      </p>
+      <p>
+        No solo programo por trabajo, programo porque disfruto resolver problemas reales con código limpio y funcional. Mi objetivo es aportar valor en cada proyecto.
+      </p>
+    </section>
 
-      <section>
-        <h2>Servicios que ofrezco</h2>
-        <ul>
-          <li>Desarrollo web a medida (frontend & backend)</li>
-          <li>Automatización de pruebas y procesos</li>
-          <li>Integración de herramientas personalizadas</li>
-          <li>Consultoría técnica y mejora de sistemas</li>
-        </ul>
-      </section>
+    <section>
+      <h2>¿Qué es moises-test?</h2>
+      <p>
+        <strong>moises-test</strong> es una herramienta de testing diseñada para desarrolladores y QA que buscan automatización sin complicaciones. 
+        Es modular, rápida de implementar y personalizable para adaptarse a distintos entornos de desarrollo.
+      </p>
+      <p>
+        Es una solución que he construido con atención al detalle, pensando en quienes necesitan eficiencia y resultados confiables.
+      </p>
+    </section>
 
-      <section>
-        <h2>Contáctame</h2>
-        <p>¿Tienes una idea o proyecto? Estoy abierto a colaborar.</p>
-        <p>
-          <strong>Teléfono:</strong>
-          <a href="tel:+34 671 55 05 07">+34 671 55 05 07</a>
-        </p>
-        <p>
-          <strong>Email:</strong>
-          <a href="moisesbgg@proton.me">moisesbgg@proton.me</a>
-        </p>
-        <a href="moisesbgg@proton.me" class="cta">Enviar mensaje</a>
-      </section>
-    </div>
+    <section>
+      <h2>Servicios que ofrezco</h2>
+      <ul>
+        <li>Desarrollo web a medida (frontend & backend)</li>
+        <li>Automatización de pruebas y procesos</li>
+        <li>Integración de herramientas personalizadas</li>
+        <li>Consultoría técnica y mejora de sistemas</li>
+      </ul>
+    </section>
 
-    <footer>
-      &copy; 2025 Moises · Todos los derechos reservados · moises-test
-    </footer>
-  </body>
+    <section>
+      <h2>Contáctame</h2>
+      <p>¿Tienes una idea o proyecto? Estoy abierto a colaborar.</p>
+      <p><strong>Teléfono:</strong> <a href="tel:+34 671 55 05 07">+34 671 55 05 07</a></p>
+      <p><strong>Email:</strong> <a href="mailto:moisesbgg@proton.me">moisesbgg@proton.me</a></p>
+      <a href="mailto:moisesbgg@proton.me" class="cta">Enviar mensaje</a>
+    </section>
+  </div>
+
+  <footer>
+    &copy; 2025 Moises · Todos los derechos reservados · moises-test
+  </footer>
+
+</body>
 </html>
