--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
       <header>
         <div class="logo">Moises-Test</div>
         <nav>
+          <a href="login.html">Registrarse</a>
           <a href="todo\inicio.html">Inicio</a>
           <a href="todo\datos\contactos.html">Contacto</a>
         </nav>
