--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
         <div class="logo">Moises-Test</div>
         <nav>
           <a href="login.html">Registrarse</a>
-          <a href="todo\inicio.html">Inicio</a>
-          <a href="todo\datos\contactos.html">Contacto</a>
+          <!-- <a href="todo\inicio.html">Inicio</a>
+          <a href="todo\datos\contactos.html">Contacto</a> -->
         </nav>
       </header>
 
@@ -251,7 +251,7 @@
           </p>
           <button
             class="btn-main"
-            onclick="window.location.href='todo/inicio.html'"
+            onclick="window.location.href='login.html'"
           >
             Entrar a la Aplicación
           </button>
