--- a/login.html
+++ b/login.html
@@ -263,7 +263,7 @@
 
             if (!snapshot.empty) {
               // Login correcto, redirigir a index.html
-              window.location.href = "index.html";
+              window.location.href = "todo/inicio.html";
             } else {
               errorMessage.textContent =
                 "Usuario no existe o contraseña incorrecta.";
