--- a/todo/inicio.html
+++ b/todo/inicio.html
@@ -120,14 +120,14 @@
   <body>
     <nav>
       <ul>
-        <li><a href="temas\temas.html">Temas</a></li>
+        <!-- <li><a href="temas\temas.html">Temas</a></li> -->
         <li><a href="test\test.html">Test </a></li>
         <li><a href="examen\index.html">Test oficiales</a></li>
         <li><a href="supuestos\home.html">Supuestos</a></li>
       </ul>
     </nav>
 
-    <section id="temas">
+    <!-- <section id="temas">
       <h2>Temas</h2>
       <div class="section-box">
         <p>
@@ -137,7 +137,7 @@
         </p>
         <p><a href="temas/temas.html">Acceder a los test por temas →</a></p>
       </div>
-    </section>
+    </section> -->
 
     <section id="test">
       <h2>Test</h2>
